# http_parser

./: .gitignore  CMakeLists.txt  FindHttpParser.cmake  test.cpp  test.html  test_http.cpp  websocket_server.cpp
include/: HttpParser.hpp  webutil.h
scripts/: web_minify.py
src/: webutil.c
test/: CMakeLists.txt  genbin.py  main.cpp  test2.cpp  test3.cpp  test_http.cpp  websockets.h
test/websrc/: CMakeLists.txt  gen.py  index.html  test.html
test/websrc/css/: log.css
test/websrc/js/: page.js
websrc/: content.css  content.css.c  control.css  control.css.c  control.js  control.js.c  firmware.css  firmware.css.c  fixheight.js.c  index.html.c  log.css.c  menu.css  menu.css.c  page.css  page.css.c  page.js.c
websrc/js/: fixheight.js
